2010-04-19  Jonathan Pryor  <jpryor@novell.com>

	* configure.in: Add header, structure member, and function checks as 
	  Android doesn't provide all the headers, structure members, and 
	  functions that a "full" Linux distro includes.

2010-04-19  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add a --enable-minimal=normalization option to disable support
	for string normalization.

2010-04-16  Marek Habersack  <mhabersack@novell.com>

	* configure.in: added a check for sysconf(3)

2010-04-14  Miguel de Icaza  <miguel@novell.com>

	* configure.in: turn the AC_MSG_ERROR into a AC_MSG_WARN since in
	Andrew's configuration this aborts the build:

	 host=i686-pc-linux-gnu != target=i586-suse-linux

	And I no longer remember why I added that error in the first
	place (we need to determine perhaps the arch/OS but it is
	difficult with those strings).

2010-04-08  Andreia Gaita  <avidigal@novell.com>

	* configure.in: Add an extra "only" option to --with-moonlight. This
	will configure mono to only build moonlight-specific stuff and
	nothing else. --with-moonlight=yes now just adds the moon profile to
	the build

	* Makefile.am: Add moonlight-specific rules that only build what
	moon needs. These are called directly from moon, to do fast
	moon+mono+mcs builds

	* runtime/Makefile.am: Change the build rules to have a moonlight-only
	build configuration, as well as a normal build that optionally includes
	it

2010-04-07  Raja R Harinath  <harinath@hurrynot.org>

	* runtime/Makefile.am ($(tmpinst)/bin/dmcs): Add.

2010-04-06  Andreia Gaita  <avidigal@novell.com>

	* configure.in: add --with-mcs-path option to specify where the mcs
	source can be found, if not on ./mcs or ../mcs.
	Only touch the mcs and/or olive dirs and config files if we're
	actually building them

2010-04-05  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Append -lgc to libmono_ldflags if using an external libgc.

2010-04-04  Andreas Färber  <andreas.faerber@web.de>

	* configure.in: Fix typo.