@@ -58,7 +58,10 @@ void _wapi_collection_init (void)
         ret = pthread_attr_init (&attr);
         g_assert (ret == 0);
 
-#ifdef HAVE_PTHREAD_ATTR_SETSTACKSIZE
+/* Android implements pthread_attr_setstacksize(), but errors out when using
+ * PTHREAD_STACK_MIN: http://code.google.com/p/android/issues/detail?id=7808
+ */
+#if defined(HAVE_PTHREAD_ATTR_SETSTACKSIZE) && !defined(PLATFORM_ANDROID)
         if (set_stacksize == 0) {
 #if defined(__FreeBSD__) || defined(__NetBSD__) || defined(__OpenBSD__)
 			ret = pthread_attr_setstacksize (&attr, 65536);
